# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
#

2004-08-04 19:45:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-54

    Summary:
      Renamed AnyDBM_Interface to AnyDBM
    Revision:
      missinglib--head--0.0--patch-54


    modified files:
     ChangeLog libsrc/Makefile libsrc/anyDBM/anyDBM.ml
     libsrc/anyDBM/anyDBM.mli libsrc/anyDBM/anyDBM_String.ml
     libsrc/anyDBM/anyDBM_String.mli

    renamed files:
     libsrc/anyDBM/anyDBM_Interface.ml
       ==> libsrc/anyDBM/anyDBM.ml
     libsrc/anyDBM/anyDBM_Interface.mli
       ==> libsrc/anyDBM/anyDBM.mli


2004-08-04 19:42:59 GMT	John Goerzen <jgoerzen@complete.org>	patch-53

    Summary:
      Updated docs
    Revision:
      missinglib--head--0.0--patch-53


    modified files:
     ChangeLog libsrc/anyDBM/anyDBM_Interface.mli
     libsrc/anyDBM/anyDBM_String.ml libsrc/anyDBM/anyDBM_String.mli


2004-08-04 19:34:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-52

    Summary:
      AnyDBM_String now builds
    Revision:
      missinglib--head--0.0--patch-52


    new files:
     libsrc/anyDBM/anyDBM_String.mli

    modified files:
     ChangeLog Makefile libsrc/META libsrc/Makefile
     libsrc/anyDBM/anyDBM_Interface.ml
     libsrc/anyDBM/anyDBM_Interface.mli
     libsrc/anyDBM/anyDBM_String.ml


2004-08-04 19:03:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-51

    Summary:
      Updated to split out the utilities
    Revision:
      missinglib--head--0.0--patch-51


    new files:
     libsrc/anyDBM/anyDBM_String.ml

    modified files:
     ChangeLog libsrc/anyDBM/anyDBM_Interface.ml
     libsrc/anyDBM/anyDBM_Interface.mli


2004-08-04 16:14:09 GMT	John Goerzen <jgoerzen@complete.org>	patch-50

    Summary:
      Things compile now
    Revision:
      missinglib--head--0.0--patch-50


    modified files:
     ChangeLog libsrc/anyDBM/anyDBM_Interface.ml
     libsrc/anyDBM/anyDBM_Interface.mli

