@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
 #
 
+2004-08-04 19:51:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-55
+
+    Summary:
+      Changed t to a virtual class
+    Revision:
+      missinglib--head--0.0--patch-55
+
+
+    modified files:
+     ChangeLog libsrc/anyDBM/anyDBM.ml libsrc/anyDBM/anyDBM.mli
+
+
 2004-08-04 19:45:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-54
 
     Summary:
